--- a/DemoWebSite/Content/demo.css
+++ b/DemoWebSite/Content/demo.css
@@ -1,12 +1,25 @@
 ﻿
 body {
-    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+  padding-top: 60px;
 }
-    
+@media (max-width: 979px) {
+  body {
+    padding-top: 0px;
+  }
+}
     
 #footer
 {
     margin-top: 10px;
     text-align: center;
     background-color: Gray;
+    color: White;
+}
+
+#showSourceCode {
+	position: absolute;
+	top: 50px;
+	right: 20px;
+	width: 140px;
+	z-index: 1000;
 }
