Demo contact list

--- a/DemoWebSite/Views/Contact/SendMVC.cshtml
+++ b/DemoWebSite/Views/Contact/SendMVC.cshtml
@@ -1,3 +1,5 @@
 ﻿@model DemoWebSite.Contact
 
-<p>Thanks for your message @Model.FirstName @Model.LastName!</p>
+<div class="alert alert-success">
+	Thanks for your message @Model.FirstName @Model.LastName!
+</div>
