--- a/demo/DemoWebSite/xrc/viewtest/index.cshtml
+++ b/demo/DemoWebSite/xrc/viewtest/index.cshtml
@@ -14,4 +14,5 @@
     @Html.Raw(SlotModule.Include("_markdown"))
     @Html.Raw(SlotModule.Include("_markdownFile"))
     @Html.Raw(SlotModule.Include("_slot"))
+    @Html.Raw(SlotModule.Include("_demowebsite"))
 </div>
