--- a/test/xrc.Web.AcceptanceTest/xrc/razor/index.cshtml
+++ b/test/xrc.Web.AcceptanceTest/xrc/razor/index.cshtml
@@ -17,10 +17,11 @@
 
 <div class="row-fluid">
     <div class="span12">
-        @Html.Raw(SlotModule.Include("_test"))
+        @Html.Raw(SlotModule.Include("_razorInclude"))
     </div>
 </div>
 
+<h2>MVC Integration</h2>
 <div class="row-fluid">
     <div class="span4">
         @Html.Raw(SlotModule.Include("_contactform1"))
