Porting to MVC 4 (not completed)
There is an error on the Web.AcceptanceTest Razor section

--- a/test/xrc.Web.AcceptanceTest/xrc/docs/test2/{myurl...}/index.xrc.cshtml
+++ b/test/xrc.Web.AcceptanceTest/xrc/docs/test2/{myurl...}/index.xrc.cshtml
@@ -2,7 +2,7 @@
 
 @functions
 {
-	public string Url
+	public string MyUrl
 	{
 		get;
 		set;
@@ -13,6 +13,6 @@
 
 	<h1>Catch-All!</h1>
 
-	<p>This is a catch-all page. Current url is : <b>@Url</b></p>
+	<p>This is a page inside a catch all folder. Current url is : <b>@MyUrl</b></p>
 	
 </div>
